Add support for MacOS