@@ -9,8 +9,22 @@ repositories {
     maven("https://maven.pkg.jetbrains.space/public/p/compose/dev")
 }
 
+val osName = System.getProperty("os.name")!!
+val targetOs = when {
+    osName == "Mac OS X" -> "macos"
+    osName.startsWith("Win") -> "windows"
+    osName.startsWith("Linux") -> "linux"
+    else -> error("Unsupported OS: $osName")
+}
+
+var targetArch = when (val osArch = System.getProperty("os.arch")!!) {
+    "x86_64", "amd64" -> "x64"
+    "aarch64" -> "arm64"
+    else -> error("Unsupported arch: $osArch")
+}
+
+val target = "${targetOs}-${targetArch}"
 val version = "0.7.36"
-val target = "linux-x64"
 
 java {
     toolchain {
@@ -29,6 +43,9 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.3.3")
     implementation("it.unimi.dsi:fastutil:8.2.1")
 
+    implementation("net.java.dev.jna:jna:5.12.1")
+    implementation("net.java.dev.jna:jna-platform:5.12.1")
+
     implementation(fileTree("lib") {
         include("*.jar")
     })
@@ -41,6 +58,8 @@ application {
         "--add-exports", "java.desktop/sun.java2d=ALL-UNNAMED",
         "--add-exports", "java.desktop/sun.awt=ALL-UNNAMED",
         "--add-opens", "java.desktop/sun.awt.X11=ALL-UNNAMED",
+        "--add-opens", "java.desktop/com.apple.eawt=ALL-UNNAMED",
+        "--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
     )
     mainClass.set("fleetui.AppKt")
 }
